infrastructure/03-apps/minecraft/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft
  annotations:
    metallb.io/loadBalancerIPs: "10.0.50.201"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: minecraft
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
