infrastructure/03-apps/minecraft/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty
  namespace: minecraft
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts: [minecraft.foobarbaz.fr]
      secretName: crafty-tls
  rules:
    - host: minecraft.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crafty
                port:
                  number: 8443
